--- a/SATURNN_functions.ipynb
+++ b/SATURNN_functions.ipynb
@@ -17,6 +17,8 @@
     "\n",
     "(French)\n",
     "\n",
+    "Marie Guyomard, Susana Barbosa, Lionel Fillatre, R ́egression Logistique à Noyau équivalente à un Réseau de Neurones Interprétable, Groupe de Recherche et d’Etudes de Traitement du Signal et des Images (Gretsi), 2023.\n",
+    "\n",
     "Marie Guyomard, Susana Barbosa, Lionel Fillatre, Approximation d’un Réseau de Neurones ReLU interprétable par une Régression Logistique à Noyau, Journées de la Statistique (JDS), 2023.\n",
     "\n",
     "\n",
@@ -108,6 +110,8 @@
    "id": "1d131d53",
    "metadata": {},
    "source": [
+    "**Modeling**\n",
+    "\n",
     "The SATURNN is a 1-Layer Neural Network for classification:\n",
     "$$\\Phi^\\text{SATURNN}(x,\\theta) = \\sigma(\\psi(x, \\theta)),$$\n",
     "with \n",
@@ -125,13 +129,29 @@
     "\n",
     "\n",
     "\n",
-    "Initialization Process for all $k \\in \\{1, \\dots, p\\}$:\n",
+    "**Initialization Process**\n",
+    "\n",
+    "\n",
+    "For all $k \\in \\{1, \\dots, p\\}$:\n",
     "- Fixed Parameters after initialization\n",
     "    - $\\upsilon_k(x) \\sim \\mathcal{U}[\\![ 1, d]\\!]$\n",
     "    - $s_k \\sim \\mathcal{B}(1/2)$\n",
-    "- Trainable parameters \n",
+    "- Trainable parameters : $\\theta^{(0)} = [\\beta_0^{(0)}, \\beta_1^{(0)}, \\dots, \\beta_p^{(0)}, b_1^{(0)}, \\dots, b_p^{(0)}]$\n",
     "    - $b_k \\sim \\mathcal{U}[-r, r]$\n",
-    "    - $\\beta_k \\sim \\mathcal{N}(0,1)$"
+    "    - $\\beta_k \\sim \\mathcal{N}(0,1)$\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "**Learning of the SATURNN**\n",
+    "\n",
+    "Learning SATURNN requires to minimize the following cost function:\n",
+    "$$\\mathcal{L}^{\\text{SATURNN}}(\\theta)= \\frac{1}{N} \\sum_{i=1}^N L\\left(\\sigma(\\psi(x^{(i)}, \\theta)), y^{(i)}\\right),$$\n",
+    "such that\n",
+    "$$\\hat{\\theta}^{\\text{SATURNN}} = \\arg\\min_{\\theta \\in \\mathcal{B}_2^{2p+1}(\\theta^{(0)}, R)}   \\mathcal{L}^{\\text{SATURNN}}(\\theta),$$\n",
+    "with $L(\\cdot)$ the binary cross-entropy used for binary classification tasks \n",
+    "$$L\\left(\\hat{y}, y\\right)=-y\\log(\\hat{y})-(1-y)\\log(1-\\hat{y}).$$\n",
+    "\n"
    ]
   },
   {
