--- a/SATURNN_functions.ipynb
+++ b/SATURNN_functions.ipynb
@@ -65,7 +65,6 @@
     "from sklearn import metrics \n",
     "import random\n",
     "from sklearn.utils import class_weight\n",
-    "from tqdm import tqdm, trange, tnrange\n",
     "import time\n",
     "import statistics"
    ]
@@ -482,7 +481,7 @@
     "\n",
     "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "        \n",
-    "    for i in tqdm(range(nb_folds)):\n",
+    "    for i in range(nb_folds):\n",
     "\n",
     "        # Train / Test\n",
     "        Xtrain, Xtest, y_train, y_test = train_test_split(X, Y, test_size=0.3)\n",
@@ -522,7 +521,7 @@
     "\n",
     "\n",
     "        # Entraînement du modèle\n",
-    "        for it in tnrange(epoch, desc='Epochs') :\n",
+    "        for it in range(epoch) :\n",
     "            loss_train, RTrain, rTrain, auc_train = SATURNN_model.training_step(X_tensor_train, YR_tensor_train, option_balanced, l2_reg, dropout_rate, learning_rate, K)\n",
     "            loss_test, RTest, rTest, auc_test = SATURNN_model.validation_step(X_tensor_test, YR_tensor_test, option_balanced, l2_reg, dropout_rate, K)\n",
     "            \n",
